# dotSymphony

./: .gitignore  AGENTS.md  Cargo.toml  OpenSymphony.sln  PLAN.md  PRODUCT.md  README.md  WORKFLOW.md  jest.config.js  package.json  test-output.txt
.agents/skills/: custom-codereview-guide.md
.cargo/: config.toml
.devin/rules/: ht.md
.devin/workflows/: ht.md  init-submodules.md  init-worktree.md  tdx-e2e.md  update-submodules.md
.github/workflows/: ai-pr-review.yml
.opensymphony/memory/: memory.yaml
apps/desktop/: package.json
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: file-selection.json  process-supervision.json  settings.json
apps/desktop/src-tauri/src/: commands.rs  daemon.rs  lib.rs  main.rs
apps/desktop/src-tauri/tests/: process_ownership.rs
apps/web/: package.json  vite.config.ts
crates/opensymphony-planning/: Cargo.toml
crates/opensymphony-planning/src/: codebase.rs  lib.rs  linear_graph.rs
crates/opensymphony-planning/src/compiler/: compiler.rs  mod.rs
crates/opensymphony-planning/src/generator/: session.rs
crates/opensymphony-planning/src/graph_validate/: checks.rs  manifest.rs
docs/: DEPLOYMENT.md  DEVELOPMENT.md  ai-pr-review-human-setup.md  architecture.md  build.md  cli.md  codex-app-server-harness.md  codex-app-server-prototype.md  codex.md  configuration.md  deployment-modes.md  desktop.md  docs.md  gateway-schema-v1.md  gateway.md  harness-adapter-compatibility.md  host-client-architecture.md  host-client-implementation_plan.md  hosted-client-PRD.md  implementation-plan.md  installer-and-distribution.md  linear-and-tools.md  linear-query-coverage.md  mcp.md  memory-capture-and-doc-sync.md  memory.md  model-configuration.md  okf.md  openhands-agent-server.md  openhands_agent_server_subscription_auth_analysis.md  operations.md  prerequisites.md  remote-stream-protocol-decisions.md  remote-transport-configuration.md  repository-layout.md  runtime.md  security.md  sources.md  stream-benchmark-report.md  tauri-security-checklist.md  (+6 more)
docs/specs/: ai-pr-review-system-spec.md  desktop-run-detail-operations-spec.md  llm-wiki-graph-view-spec.md  okf-memory-spec.md  opensymphony-acp-debugging-spec.md  symphony-spec-alignment.md  tui-dependency-gutter-spec.md
docs/tasks/: README.md  advanced-knowledge-debug-linear-publish.yaml  advanced-knowledge-debug-task-package.yaml  linear-osym-700-conversion.json  linear-osym-700-conversion.md  linear-publish.yaml  milestones.md  osym-102-workflow-loader-and-typed-config.md  osym-103-domain-model-and-orchestrator-state-machine.md  osym-202-rest-client-and-conversation-contract.md  osym-203-websocket-event-stream-reconciliation-and-recovery.md  osym-204-issue-session-runner.md  osym-300-tracker-workspaces-and-orchestration.md  osym-301-workspace-manager-and-lifecycle-hooks.md  osym-302-linear-read-adapter-and-issue-normalization.md  osym-304-orchestrator-scheduler-retries-and-reconciliation.md  osym-305-hierarchy-aware-task-selection.md  osym-401-control-plane-api-and-snapshot-store.md  osym-500-validation-and-local-operations.md  osym-503-cli-packaging-doctor-and-local-operations-docs.md  osym-504-supply-chain-and-security-audits-in-ci.md  osym-505-decompose-session-and-tui-into-submodules.md  osym-506-expand-error-path-tests-for-linear-and-workspace-hooks.md  osym-507-resolve-session-runtime-tracking-todo.md  osym-508-coverage-reporting-and-regression-floor.md  osym-509-audit-tracing-spans-for-secret-leakage.md  osym-700-current-gateway-inventory-and-vocabulary.md  osym-701-gateway-schemas-and-stream-feasibility.md  osym-702-gateway-module-capabilities-and-dashboard-snapshot.md  osym-703-task-graph-run-detail-file-and-diff-read-apis.md  osym-704-event-journal-and-stream-broker.md  osym-705-action-receipts-and-initial-run-actions.md  osym-710-frontend-workspace-and-shared-schemas.md  osym-711-gateway-api-client-transport-adapters-and-reducers.md  osym-712-app-shell-dashboard-task-graph-and-run-views.md  osym-713-terminal-and-log-renderer-prototype.md  osym-714-tauri-shell-and-security-capabilities.md  osym-715-desktop-connection-profiles-and-daemon-management.md  osym-716-desktop-settings-keychain-and-native-actions.md  osym-717-desktop-local-stream-optimization.md  (+67 more)
examples/: okf_parse_render.rs
older/: .npmrc  jest.config.js  jest.setup.cjs  package.json  tsconfig.json  tsconfig.projects.json
older/.cargo/: config.toml
older/scripts/: check_graphql_only_cleanup.sh  codex_app_server_benchmark.mjs  gen_icons.py  live_e2e.sh  smoke_local.sh
older/src/: lib.rs  main.rs
older/tests/: action_handler.rs  client_resilience.rs  codex_app_server.rs  coe_400_evidence.rs  control_plane.rs  debug.rs  doctor.rs  event_normalization.rs  fake_server_contract.rs  gateway.rs  help.rs  hierarchy_selection.rs  init.rs  install.rs  issue_session_runner.rs  linear_client.rs  live_local_suite.rs  live_pinned_server.rs  memory.rs  reducer.rs  run.rs  runtime_mirror.rs  scheduler.rs  snapshot_serialization.rs  stream_benchmarks.rs  supervisor.rs  task_graph_mutations_routes.rs  transport_config.rs  transport_equivalence.rs  tui.rs  update.rs  workspace_manager.rs
src/: lib.rs
src/OpenSymphony.Cli/: Cli.cs  (+1 more)
tests/: action_handler.rs  codex_app_server.rs  gateway_schema.rs  stream_benchmarks.rs  task_graph_mutations_routes.rs
(+464 files in other folders)
