[package]
name = "opensymphony"
description = "A Rust implementation of the OpenAI Symphony orchestration design"
license = "MIT"
homepage = "https://opensymphony.dev"
repository = "https://github.com/kumanday/OpenSymphony"
authors = ["Leonardo Gonzalez <leonardo.gonzalez@trilogy.com>"]
readme = "README.md"
keywords = ["ai", "agents", "orchestration", "linear", "cli"]
categories = ["command-line-utilities", "development-tools"]
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[workspace]
members = ["."]
resolver = "2"

[dependencies]
async-stream.workspace = true
async-trait.workspace = true
axum.workspace = true
chrono.workspace = true
clap.workspace = true
ftui.workspace = true
futures-util.workspace = true
liquid.workspace = true
reqwest.workspace = true
reqwest-eventsource.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
sha2.workspace = true
tempfile.workspace = true
thiserror.workspace = true
time.workspace = true
tokio-tungstenite.workspace = true
tokio.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
unicode-width.workspace = true
url.workspace = true
uuid.workspace = true

[target.'cfg(unix)'.dependencies]
rustix.workspace = true

[workspace.package]
edition = "2024"
license = "MIT"
repository = "https://github.com/kumanday/OpenSymphony"
rust-version = "1.93"
version = "1.3.3"

[workspace.lints.rust]
rust_2018_idioms = { level = "warn", priority = -1 }
unsafe_code = "forbid"
unused_lifetimes = "warn"
unused_macro_rules = "warn"
unused_qualifications = "warn"

[workspace.lints.clippy]
dbg_macro = "warn"
manual_assert = "warn"
todo = "warn"
unnecessary_wraps = "warn"
unwrap_used = "warn"

[workspace.dependencies]
async-stream = "0.3"
async-trait = "0.1"
axum = { version = "0.8", features = ["macros", "ws"] }
chrono = { version = "0.4", features = ["clock", "serde"] }
clap = { version = "4.5", features = ["derive", "env"] }
ftui = { version = "0.2.1", features = ["crossterm"] }
futures-util = "0.3"
libc = "0.2"
liquid = "0.26"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls", "stream"] }
reqwest-eventsource = "0.6"
rustix = { version = "1", features = ["process"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sha2 = "0.10"
tempfile = "3"
thiserror = "2"
time = "=0.3.47"
tokio = { version = "1", features = ["fs", "io-std", "io-util", "macros", "net", "process", "rt-multi-thread", "signal", "sync", "time"] }
tokio-tungstenite = { version = "0.28", features = ["rustls-tls-native-roots"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
unicode-width = "0.2"
url = "2"
uuid = { version = "1", features = ["serde", "v4"] }
